--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -48,7 +48,7 @@
                     <ul class="dropdown-menu dropdown-menu--table"
                         attr.aria-labelledby="tableRowDropdown-{{element.id}}">
                         <li class="dropdown-item">
-                            <a [routerLink]="[element.id, 'edit-application']"
+                            <a [routerLink]="['edit-application', element.id ]"
                                 routerLinkActive="active">{{ 'APPLICATION-TABLE-ROW.EDIT' | translate }}</a>
                         </li>
                         <li class="dropdown-item">
@@ -63,5 +63,6 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
+    </mat-paginator>
 </div>
