--- a/src/assets/scss/elements/_icons.scss
+++ b/src/assets/scss/elements/_icons.scss
@@ -23,3 +23,10 @@
     color: $color-Icons-light;
   }
 }
+
+.icon-list-wrapper{
+  display: inline-grid;
+  padding-top: 5px;
+  padding-right: 5px;
+  padding-left: 5px;
+}
