--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -246,7 +246,7 @@ $color-bg-info: $color-blue-004 !default;
 $color-Icons-primary: $color-primary !default;
 $color-Icons-secondary: $color-secondary !default;
 $color-Icons-alternative: $color-primary !default;
-$color-Icons-light: $color-light-green-001 !default;
+$color-Icons-light: $color-grey-009 !default;
 $color-icon-label: $color-text-light !default;
 
 // //Links color
