--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -27,8 +27,8 @@
                 <label for="id"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.ID' | translate}}</label>
                 <input type="text" class="form-control" id="id" name="id" [disabled]="!deviceProfile.canEdit"
-                    [placeholder]="'PROFILES.DEVICE_PROFILE.ID_PLACEHOLDER' | translate" maxlength="50" required disabled
-                    [ngModel]="deviceProfile.id">
+                    [placeholder]="'PROFILES.DEVICE_PROFILE.ID_PLACEHOLDER' | translate" maxlength="50" required
+                    disabled [ngModel]="deviceProfile.id">
             </div>
 
             <div class="col-xs-12 form-group">
@@ -38,13 +38,8 @@
                     [placeholder]="'PROFILES.DEVICE_PROFILE.MACVERSION_PLACEHOLDER' | translate" maxlength="50" required
                     [(ngModel)]="deviceProfile.macVersion"> -->
                 <mat-form-field appearance="outline">
-                    <mat-select 
-                        [disabled]="!deviceProfile.canEdit"
-                        matNativeControl 
-                        required
-                        [compareWith]="compare"
-                        name="macVersion" 
-                        [(value)]="deviceProfile.macVersion">
+                    <mat-select [disabled]="!deviceProfile.canEdit" matNativeControl required [compareWith]="compare"
+                        name="macVersion" [(value)]="deviceProfile.macVersion">
                         <mat-option value="1.0.0">1.0.0</mat-option>
                         <mat-option value="1.0.1">1.0.1</mat-option>
                         <mat-option value="1.0.2">1.0.2</mat-option>
@@ -57,10 +52,8 @@
                 <label
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.REGPARAMSREVISION' | translate}}</label>
                 <mat-form-field appearance="outline">
-                    <mat-select matNativeControl required name="regParamsRevision"
-                        [disabled]="!deviceProfile.canEdit"
-                        [(value)]="deviceProfile.regParamsRevision"
-                        [compareWith]="compare">
+                    <mat-select matNativeControl required name="regParamsRevision" [disabled]="!deviceProfile.canEdit"
+                        [(value)]="deviceProfile.regParamsRevision" [compareWith]="compare">
                         <mat-option value="A">A</mat-option>
                         <mat-option value="B">B</mat-option>
                     </mat-select>
@@ -69,7 +62,8 @@
             <div class="col-xs-12 form-group">
                 <label for="maxEIRP"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.MAXEIRP' | translate}}</label>
-                <input type="number" class="form-control" id="maxEIRP" name="maxEIRP" [disabled]="!deviceProfile.canEdit"
+                <input type="number" class="form-control" id="maxEIRP" name="maxEIRP"
+                    [disabled]="!deviceProfile.canEdit"
                     [placeholder]="'PROFILES.DEVICE_PROFILE.MAXEIRP_PLACEHOLDER' | translate" maxlength="50" min="0"
                     required [(ngModel)]="deviceProfile.maxEIRP">
             </div>
@@ -77,7 +71,8 @@
             <div class="col-xs-12 form-group">
                 <label for="geolocBufferTTL"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.GEOLOCBUFFERTTL' | translate}}</label>
-                <input type="number" min="0" class="form-control" id="geolocBufferTTL" name="geolocBufferTTL" [disabled]="!deviceProfile.canEdit"
+                <input type="number" min="0" class="form-control" id="geolocBufferTTL" name="geolocBufferTTL"
+                    [disabled]="!deviceProfile.canEdit"
                     [placeholder]="'PROFILES.DEVICE_PROFILE.GEOLOCBUFFERTTL_PLACEHOLDER' | translate" maxlength="50"
                     required [(ngModel)]="deviceProfile.geolocBufferTTL">
             </div>
@@ -85,12 +80,13 @@
             <div class="col-xs-12 form-group">
                 <label for="geolocMinBufferSize"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.GEOLOCMINBUFFERSIZE' | translate}}</label>
-                <input type="number" min="0" class="form-control" id="geolocMinBufferSize" name="geolocMinBufferSize" [disabled]="!deviceProfile.canEdit"
+                <input type="number" min="0" class="form-control" id="geolocMinBufferSize" name="geolocMinBufferSize"
+                    [disabled]="!deviceProfile.canEdit"
                     [placeholder]="'PROFILES.DEVICE_PROFILE.GEOLOCMINBUFFERSIZE_PLACEHOLDER' | translate" maxlength="50"
                     required [(ngModel)]="deviceProfile.geolocMinBufferSize">
             </div>
             <div class="col-xs-12 form-group mt-3" *ngIf="deviceProfile.internalOrganizationName">
-                <label for="geolocMinBufferSize"class="form-label">
+                <label for="geolocMinBufferSize" class="form-label">
                     {{'PROFILES.DEVICE_PROFILE.ORGANIZATION' | translate}}
                 </label>
                 {{deviceProfile.internalOrganizationName}}
@@ -99,7 +95,8 @@
         </mat-tab>
         <mat-tab label="{{'PROFILES.DEVICE_PROFILE.OTAA-ABP' | translate}}">
 
-            <mat-checkbox [(ngModel)]="deviceProfile.supportsJoin" name="supportsJoin" [disabled]="!deviceProfile.canEdit">
+            <mat-checkbox [(ngModel)]="deviceProfile.supportsJoin" name="supportsJoin"
+                [disabled]="!deviceProfile.canEdit">
                 {{'PROFILES.DEVICE_PROFILE.OTAA-ACTIVATE' | translate}}
             </mat-checkbox>
 
@@ -107,28 +104,32 @@
                 <div class="col-xs-12 form-group">
                     <label for="rxDelay1"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXDELAY1' | translate}}</label>
-                    <input type="number" class="form-control" id="rxDelay1" name="rxDelay1" [disabled]="!deviceProfile.canEdit"
+                    <input type="number" class="form-control" id="rxDelay1" name="rxDelay1"
+                        [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.RXDELAY1_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.rxDelay1">
                 </div>
                 <div class="col-xs-12 form-group">
                     <label for="rxDROffset1"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXDROFFSET1' | translate}}</label>
-                    <input type="number" class="form-control" id="rxDROffset1" name="rxDROffset1" [disabled]="!deviceProfile.canEdit"
+                    <input type="number" class="form-control" id="rxDROffset1" name="rxDROffset1"
+                        [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.RXDROFFSET1_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.rxDROffset1">
                 </div>
                 <div class="col-xs-12 form-group">
                     <label for="rxDataRate2"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXDATARATE2' | translate}}</label>
-                    <input type="number" class="form-control" id="rxDataRate2" name="rxDataRate2" [disabled]="!deviceProfile.canEdit"
+                    <input type="number" class="form-control" id="rxDataRate2" name="rxDataRate2"
+                        [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.RXDATARATE2_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.rxDataRate2">
                 </div>
                 <div class="col-xs-12 form-group">
                     <label for="rxFreq2"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.RXFREQ2' | translate}}</label>
-                    <input type="number" class="form-control" id="rxFreq2" name="rxFreq2" [disabled]="!deviceProfile.canEdit"
+                    <input type="number" class="form-control" id="rxFreq2" name="rxFreq2"
+                        [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.RXFREQ2_PLACEHOLDER' | translate" maxlength="50" min="0"
                         required [(ngModel)]="deviceProfile.rxFreq2">
                 </div>
@@ -136,14 +137,16 @@
                     <label for="factoryPresetFreqsInput"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS' | translate}}</label>
                     <input type="text" class="form-control" id="factoryPresetFreqsInput" name="factoryPresetFreqsInput"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS_PLACEHOLDER' | translate" [disabled]="!deviceProfile.canEdit"
-                        maxlength="50" required [(ngModel)]="deviceProfile.factoryPresetFreqsInput">
+                        [placeholder]="'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS_PLACEHOLDER' | translate"
+                        [disabled]="!deviceProfile.canEdit" maxlength="50" required
+                        [(ngModel)]="deviceProfile.factoryPresetFreqsInput">
                 </div>
             </ng-container>
         </mat-tab>
         <mat-tab label="Class B">
 
-            <mat-checkbox [(ngModel)]="deviceProfile.supportsClassB" name="supportsClassB" [disabled]="!deviceProfile.canEdit">
+            <mat-checkbox [(ngModel)]="deviceProfile.supportsClassB" name="supportsClassB"
+                [disabled]="!deviceProfile.canEdit">
                 {{'PROFILES.DEVICE_PROFILE.SUPPORTSCLASSB_ACTIVATE' | translate}}
             </mat-checkbox>
 
@@ -151,7 +154,8 @@
                 <div class="col-xs-12 form-group">
                     <label for="classBTimeout"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.CLASSBTIMEOUT' | translate}}</label>
-                    <input type="number" class="form-control" id="classBTimeout" name="classBTimeout" [disabled]="!deviceProfile.canEdit"
+                    <input type="number" class="form-control" id="classBTimeout" name="classBTimeout"
+                        [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.CLASSBTIMEOUT_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.classBTimeout">
                 </div>
@@ -176,7 +180,8 @@
                 <div class="col-xs-12 form-group">
                     <label for="pingSlotDR"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.PINGSLOTDR' | translate}}</label>
-                    <input type="number" class="form-control" id="pingSlotDR" name="pingSlotDR" [disabled]="!deviceProfile.canEdit"
+                    <input type="number" class="form-control" id="pingSlotDR" name="pingSlotDR"
+                        [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.PINGSLOTDR_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.pingSlotDR">
                 </div>
@@ -184,7 +189,8 @@
                 <div class="col-xs-12 form-group">
                     <label for="pingSlotFreq"
                         class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.PINGSLOTFREQ' | translate}}</label>
-                    <input type="number" class="form-control" id="pingSlotFreq" name="pingSlotFreq" [disabled]="!deviceProfile.canEdit"
+                    <input type="number" class="form-control" id="pingSlotFreq" name="pingSlotFreq"
+                        [disabled]="!deviceProfile.canEdit"
                         [placeholder]="'PROFILES.DEVICE_PROFILE.PINGSLOTFREQ_PLACEHOLDER' | translate" maxlength="50"
                         min="0" required [(ngModel)]="deviceProfile.pingSlotFreq">
                 </div>
@@ -192,13 +198,15 @@
         </mat-tab>
         <mat-tab label="Class C">
 
-            <mat-checkbox [(ngModel)]="deviceProfile.supportsClassC" name="supportsClassC" [disabled]="!deviceProfile.canEdit">
+            <mat-checkbox [(ngModel)]="deviceProfile.supportsClassC" name="supportsClassC"
+                [disabled]="!deviceProfile.canEdit">
                 {{'PROFILES.DEVICE_PROFILE.SUPPORTSCLASSC_ACTIVATE' | translate}}
             </mat-checkbox>
             <div class="col-xs-12 form-group">
                 <label for="classCTimeout"
                     class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.CLASSCTIMEOUT' | translate}}</label>
-                <input type="number" class="form-control" id="classCTimeout" name="classCTimeout" [disabled]="!deviceProfile.canEdit"
+                <input type="number" class="form-control" id="classCTimeout" name="classCTimeout"
+                    [disabled]="!deviceProfile.canEdit"
                     [placeholder]="'PROFILES.DEVICE_PROFILE.CLASSCTIMEOUT_PLACEHOLDER' | translate" maxlength="50"
                     min="0" required [(ngModel)]="deviceProfile.classCTimeout">
             </div>
