Device profile and servicer profile update

--- a/src/app/profiles/device-profiles/device-profiles-list/device-profiles-item/device-profiles-item.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-list/device-profiles-item/device-profiles-item.component.html
@@ -9,7 +9,7 @@
             <a (click)="onDeleteDeviceProfile()">
                 <div class="icon-list-wrapper text-center">
                     <fa-icon [icon]="faTimesCircle" class="icon--primary"></fa-icon>
-                    <label class="label label--icon">Slet</label>
+                    <label class="label label--icon">{{'PROFILES.DEVICE_PROFILE.DELETE-FROM-LIST' | translate}}</label>
                 </div>
             </a>
         </div>
