--- a/src/app/shared/components/top-bar-table/top-bar-table.component.html
+++ b/src/app/shared/components/top-bar-table/top-bar-table.component.html
@@ -1,6 +1,6 @@
 <div class="row sub-bar-wrapper">
     <div class="col-12 d-flex sub-bar align-items-center">
-        <h3>{{title}}</h3>
+        <h3 *ngIf="title" class="mb-0">{{title}}</h3>
         <div class="ml-auto d-flex">
             <div>
                 <button *ngIf="ctaRouterLinkSecondary" [routerLink]="ctaRouterLinkSecondary" routerLinkActive="active"
