--- a/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
+++ b/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
@@ -1,6 +1,6 @@
-<div class="mat-elevation-z8">
-    <app-loading-spinner *ngIf=" isLoadingResults">
-    </app-loading-spinner>
+<app-loading-spinner *ngIf="isLoadingResults; else showTable">
+</app-loading-spinner>
+<ng-template class="mat-elevation-z8" #showTable>
     <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
         <!-- Name Column -->
@@ -74,5 +74,6 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons></mat-paginator>
-</div>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
+    </mat-paginator>
+</ng-template>
