--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -1,12 +1,6 @@
-<div class="mat-elevation-z8">
-    <app-loading-spinner *ngIf=" isLoadingResults">
-    </app-loading-spinner>
-    <!-- <div class="mx-3">
-        <mat-form-field>
-            <mat-label>Filtrer tabellen på navn, id, og organisation</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-        </mat-form-field>
-    </div> -->
+<app-loading-spinner *ngIf="isLoadingResults; else showTable">
+</app-loading-spinner>
+<ng-template class="mat-elevation-z8" #showTable>
     <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
         <!-- Name Column -->
@@ -98,4 +92,4 @@
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
     </mat-paginator>
-</div>
+</ng-template>
