--- a/src/app/sigfox/sigfox-groups-detail/sigfox-device-type-table/sigfox-device-type-table.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-device-type-table/sigfox-device-type-table.component.html
@@ -1,12 +1,13 @@
-
-<div class="mat-elevation-z8 row table">
+<app-loading-spinner *ngIf="isLoadingResults; else showTable">
+</app-loading-spinner>
+<ng-template class="mat-elevation-z8 row table" #showTable>
     <table mat-table [dataSource]="dataSource">
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>{{ 'SIGFOX-GROUP.PROFILES.DEVICE-TYPE-NAME' | translate }}</th>
             <td mat-cell *matCellDef="let element">
                 <a [routerLink]="[element.id, 'edit-device-type']" routerLinkActive="active" class="device-link">
                     {{element.name}}
-                </a>    
+                </a>
             </td>
         </ng-container>
 
@@ -19,4 +20,4 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="editDeviceType(row)"></tr>
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" showFirstLastButtons></mat-paginator>
-</div>
+</ng-template>
