--- a/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
@@ -1,20 +1,15 @@
 <app-top-bar [showSelectedSort]="false" backButtonTitle="{{'SIGFOX-GROUP.SIGFOX-GROUP' | translate}}"
-    [title]="'SIGFOX-GROUP.PROFILES.NAME' | translate"></app-top-bar>
-
-<div class=" jumbotron">
-    <div class="row mt-5">
-        <div class="col-6">
-            <h4>{{'SIGFOX-GROUP.PROFILES.DEVICE-TYPE' | translate}}</h4>
-        </div>
-        <div class="col-6">
-            <button class="btn btn-primary float-right"
-                (click)="onNewDeviceType()">{{'SIGFOX-GROUP.PROFILES.CREATE-NEW-DEVICE-TYPE' | translate}}</button>
-        </div>
-    </div>
-    <hr>
+    [title]="'SIGFOX-GROUP.PROFILES.NAME' | translate"
+    [ctaLabel]="'SIGFOX-GROUP.PROFILES.CREATE-NEW-DEVICE-TYPE' | translate" [ctaRouterLink]="'new-device-type'">
+</app-top-bar>
+<div class="container-fluid">
     <div class="row">
-        <div class="col-xs-12">
-            <app-sigfox-device-type-table></app-sigfox-device-type-table>
+        <div class="col-12">
+            <div class=" jumbotron">
+                <h3>{{'SIGFOX-GROUP.PROFILES.DEVICE-TYPE' | translate}}</h3>
+                <app-sigfox-device-type-table [sigfoxDevices]="sigfoxDevices" [isLoadingResults]="isLoadingResults">
+                </app-sigfox-device-type-table>
+            </div>
         </div>
     </div>
 </div>
