--- a/src/app/sigfox/sigfox-groups-list/sigfox-groups-list.component.html
+++ b/src/app/sigfox/sigfox-groups-list/sigfox-groups-list.component.html
@@ -1,21 +1,18 @@
-<app-top-bar [showSelectedSort]="false" [title]="'SIGFOX-GROUP.ADMINISTRATION.NAME' | translate"></app-top-bar>
+<div *ngIf="sigfoxGroups">
+    <app-top-bar [showSelectedSort]="false" [title]="'SIGFOX-GROUP.ADMINISTRATION.NAME' | translate"
+        [ctaRouterLink]="'new-group'" [ctaLabel]="'SIGFOX-GROUP.ADMINISTRATION.CREATE-NEW-GROUP' | translate">
+    </app-top-bar>
 
-<div class=" jumbotron">
-    <div class="row mt-5">
-        <div class="col-6">
-            <h4>Liste over grupper</h4>
-        </div>
-        <div class="col-6">
-            <button class="btn btn-primary float-right"
-                (click)="onNewGroup()">{{'SIGFOX-GROUP.ADMINISTRATION.CREATE-NEW-GROUP' | translate}}</button>
-        </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-xs-12" *ngIf="sigfoxGroups">
-            <app-sigfox-groups-list-item *ngFor="let group of sigfoxGroups; let i = index" [sigfoxGroup]="group">
-            </app-sigfox-groups-list-item>
-
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class=" jumbotron" *ngIf="sigfoxGroups">
+                    <h3>{{'SIGFOX-GROUP.ADMINISTRATION.CREATE-NEW-GROUP' | translate}}</h3>
+                    <app-sigfox-groups-list-item *ngFor="let group of sigfoxGroups; let i = index"
+                        [sigfoxGroup]="group">
+                    </app-sigfox-groups-list-item>
+                </div>
+            </div>
         </div>
     </div>
 </div>
