--- a/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
@@ -1,14 +1,30 @@
-<app-top-bar [showSelectedSort]="false" backButtonTitle="{{'SIGFOX-GROUP.SIGFOX-GROUP' | translate}}"
-    [title]="'SIGFOX-GROUP.PROFILES.NAME' | translate"
-    [ctaLabel]="'SIGFOX-GROUP.PROFILES.CREATE-NEW-DEVICE-TYPE' | translate" [ctaRouterLink]="'new-device-type'">
-</app-top-bar>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
-            <div class=" jumbotron">
-                <h3>{{'SIGFOX-GROUP.PROFILES.DEVICE-TYPE' | translate}}</h3>
-                <app-sigfox-device-type-table [sigfoxDevices]="sigfoxDevices" [isLoadingResults]="isLoadingResults">
-                </app-sigfox-device-type-table>
+<div *ngIf="sigfoxGroup">
+    <app-top-bar [showSelectedSort]="false" backButtonTitle="{{'SIGFOX-GROUP.SIGFOX-GROUP' | translate}}"
+        [title]="sigfoxGroup.sigfoxGroupData.name"
+        [ctaLabel]="'SIGFOX-GROUP.PROFILES.CREATE-NEW-DEVICE-TYPE' | translate" [ctaRouterLink]="'new-device-type'">
+    </app-top-bar>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class=" jumbotron">
+                    <h3>{{'PERMISSION.DETAIL.HEADLINE' | translate}}</h3>
+                    <p><strong>{{ 'PERMISSION.DETAIL.CREATED' | translate }}</strong>{{sigfoxGroup.createdAt | dkTime}}<span
+                            *ngIf="sigfoxGroup.belongsTo.name">{{sigfoxGroup.belongsTo.name | createdUpdatedBy}}</span>
+                    </p>
+                    <p *ngIf="sigfoxGroup.createdAt !== sigfoxGroup.updatedAt">
+                        <strong>{{ 'PERMISSION.DETAIL.UPDATED' | translate }}</strong>{{sigfoxGroup.updatedAt | dkTime}}
+                        <span *ngIf="sigfoxGroup.belongsTo.name">
+                            {{sigfoxGroup.belongsTo.name | createdUpdatedBy}} </span></p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class=" jumbotron">
+                    <h3>{{'SIGFOX-GROUP.PROFILES.DEVICE-TYPE' | translate}}</h3>
+                    <app-sigfox-device-type-table [sigfoxDevices]="sigfoxDevices" [isLoadingResults]="isLoadingResults">
+                    </app-sigfox-device-type-table>
+                </div>
             </div>
         </div>
     </div>
