--- a/src/app/admin/permission/permission-detail/permission-detail.component.html
+++ b/src/app/admin/permission/permission-detail/permission-detail.component.html
@@ -2,11 +2,10 @@
     <app-top-bar [data]="permission" [backButton]="backButton" [subPage]="true" [addDetailDowndown]="true"
         [dropDownButton]="dropdownButton" (deleteSelectedInDropdown)="onDeletePermission()">
     </app-top-bar>
-
-    <div class=" jumbotron">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-12">
-                <div class="float-left">
+            <div class="col-12">
+                <div class=" jumbotron">
                     <h3>{{'PERMISSION.DETAIL.HEADLINE' | translate}}</h3>
                     <p><strong>{{ 'PERMISSION.DETAIL.CREATED' | translate }}</strong>{{permission.createdAt | dkTime}}<span
                             *ngIf="permission.createdByName">{{permission.createdByName | createdUpdatedBy}}</span></p>
@@ -18,17 +17,18 @@
                     <p><strong>{{'PERMISSION.DETAIL.ORG' | translate}}</strong>
                         {{permission.organization?.name}}
                     </p>
+
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <div class="jumbotron">
-                <h3>
-                    {{ 'PERMISSION.DETAIL.USERS' | translate }}
-                </h3>
-                <app-user-table [users]="users" [isLoadingResults]="isLoadingResults"></app-user-table>
+        <div class="row">
+            <div class="col-12">
+                <div class="jumbotron">
+                    <h3>
+                        {{ 'PERMISSION.DETAIL.USERS' | translate }}
+                    </h3>
+                    <app-user-table [users]="users" [isLoadingResults]="isLoadingResults"></app-user-table>
+                </div>
             </div>
         </div>
     </div>
