--- a/src/app/admin/users/user-detail/user-detail.component.html
+++ b/src/app/admin/users/user-detail/user-detail.component.html
@@ -1,41 +1,43 @@
 <div *ngIf="user">
     <app-top-bar [data]="user" [backButton]="backButton" [subPage]="true" [addDetailDowndown]="true"
         [dropDownButton]="dropdownButton"></app-top-bar>
-    <div class="row">
-        <div class="col-12">
-            <div class=" jumbotron">
-                <h3>{{ 'USERS.DETAIL.HEADLINE' | translate }}</h3>
-                <p><strong>{{ 'USERS.DETAIL.EMAIL' | translate }}</strong>{{user.email}}</p>
-                <p><strong>{{ 'USERS.DETAIL.CREATED' | translate }}</strong>{{user.createdAt | dkTime}}<span
-                        *ngIf="user.createdByName">{{user.createdByName | createdUpdatedBy}}</span></p>
-                <p *ngIf="user.createdAt !== user.updatedAt">
-                    <strong>{{ 'USERS.DETAIL.UPDATED' | translate }}</strong>{{user.updatedAt | dkTime}}
-                    <span *ngIf="user.updatedByName">
-                        {{user.updatedByName | createdUpdatedBy}} </span></p>
-                <p [ngClass]="user.active | activeDeactive">
-                    <strong>{{ 'USERS.DETAIL.STATUS' | translate }}</strong>{{user.active | activeDeactive}}</p>
-                <P *ngIf="user.lastLogin; else noLogin">
-                    <strong>{{ 'USERS.DETAIL.LAST-LOGIN' | translate }}</strong>{{user?.lastLogin | date}}</P>
-                <ng-template #noLogin>
-                    <p><strong>{{ 'USERS.DETAIL.LAST-LOGIN' | translate }}</strong>{{ 'USERS.DETAIL.NO-LOGIN' | translate }}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class=" jumbotron">
+                    <h3>{{ 'USERS.DETAIL.HEADLINE' | translate }}</h3>
+                    <p><strong>{{ 'USERS.DETAIL.EMAIL' | translate }}</strong>{{user.email}}</p>
+                    <p><strong>{{ 'USERS.DETAIL.CREATED' | translate }}</strong>{{user.createdAt | dkTime}}<span
+                            *ngIf="user.createdByName">{{user.createdByName | createdUpdatedBy}}</span></p>
+                    <p *ngIf="user.createdAt !== user.updatedAt">
+                        <strong>{{ 'USERS.DETAIL.UPDATED' | translate }}</strong>{{user.updatedAt | dkTime}}
+                        <span *ngIf="user.updatedByName">
+                            {{user.updatedByName | createdUpdatedBy}} </span></p>
+                    <p [ngClass]="user.active | activeDeactive">
+                        <strong>{{ 'USERS.DETAIL.STATUS' | translate }}</strong>{{user.active | activeDeactive}}</p>
+                    <P *ngIf="user.lastLogin; else noLogin">
+                        <strong>{{ 'USERS.DETAIL.LAST-LOGIN' | translate }}</strong>{{user?.lastLogin | date}}</P>
+                    <ng-template #noLogin>
+                        <p><strong>{{ 'USERS.DETAIL.LAST-LOGIN' | translate }}</strong>{{ 'USERS.DETAIL.NO-LOGIN' | translate }}
+                        </p>
+                    </ng-template>
+                    <p><strong>{{ 'USERS.DETAIL.ADDED-DATE' | translate }}</strong>{{user?.createdAt | date}}</p>
+                    <p><strong>{{ 'USERS.DETAIL.GLOBALADMIN' | translate }}</strong>
+                        {{((user.permissions | isGlobalAdmin) ? 'USERS.GLOBAL_ADMIN.TRUE' : 'USERS.GLOBAL_ADMIN.FALSE') | translate}}
                     </p>
-                </ng-template>
-                <p><strong>{{ 'USERS.DETAIL.ADDED-DATE' | translate }}</strong>{{user?.createdAt | date}}</p>
-                <p><strong>{{ 'USERS.DETAIL.GLOBALADMIN' | translate }}</strong>
-                    {{((user.permissions | isGlobalAdmin) ? 'USERS.GLOBAL_ADMIN.TRUE' : 'USERS.GLOBAL_ADMIN.FALSE') | translate}}
-                </p>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <div class="jumbotron">
-                <h3 class="">
-                    {{ 'USERS.DETAIL.PERMISSIONS' | translate }}
-                </h3>
-                <app-permission-tabel [permissions]="permissions" (deletePermission)="deletePermission($event)"
-                    [isLoadingResults]="isLoadingResults">
-                </app-permission-tabel>
+        <div class="row">
+            <div class="col-12">
+                <div class="jumbotron">
+                    <h3 class="">
+                        {{ 'USERS.DETAIL.PERMISSIONS' | translate }}
+                    </h3>
+                    <app-permission-tabel [permissions]="permissions" (deletePermission)="deletePermission($event)"
+                        [isLoadingResults]="isLoadingResults">
+                    </app-permission-tabel>
+                </div>
             </div>
         </div>
     </div>
