--- a/src/app/admin/users/user-list/user-list.component.html
+++ b/src/app/admin/users/user-list/user-list.component.html
@@ -1,7 +1,12 @@
 <app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.USERS' | translate"
     [ctaLabel]="'USERS.CREATE' | translate" [ctaRouterLink]="'new-user'" (updatePageLimit)="updatePageLimit($event)"
     (selectedSortChange)="changeSort($event)"></app-top-bar>
-
-<div class="page">
-    <app-user-table [users]="users" [isLoadingResults]="isLoadingResults"></app-user-table>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <div class="page">
+                <app-user-table [users]="users" [isLoadingResults]="isLoadingResults"></app-user-table>
+            </div>
+        </div>
+    </div>
 </div>
