--- a/src/app/device-model/device-model-list/device-model-list.component.html
+++ b/src/app/device-model/device-model-list/device-model-list.component.html
@@ -1,7 +1,12 @@
 <app-top-bar [title]="'NAV.DEVICE-MODEL' | translate" [ctaLabel]="'FORM.CREATE-NEW-DEVICE-MODEL' | translate"
   [ctaRouterLink]="'device-model-edit'">
 </app-top-bar>
-
-<div class="page">
-  <app-device-model-table></app-device-model-table>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12">
+      <div class="page">
+        <app-device-model-table></app-device-model-table>
+      </div>
+    </div>
+  </div>
 </div>
