--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,11 @@
 <app-top-bar [title]="'NAV.SEARCH' | translate" [searchQuery]="query"></app-top-bar>
-
-<div class="page">
-    <app-search-table [searchText]="decode(query)">
-    </app-search-table>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <div class="page">
+                <app-search-table [searchText]="decode(query)">
+                </app-search-table>
+            </div>
+        </div>
+    </div>
 </div>
