fix on shadow on tables

--- a/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
+++ b/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
-      <div class="page">
+      <div class="jumbotron--table">
         <app-datatarget-table [pageLimit]="pageLimit"></app-datatarget-table>
       </div>
     </div>
