--- a/src/app/admin/organisation/organisation-list/organisation-list.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-list.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <div class="page">
+            <div class="jumbotron--table">
                 <app-organisation-tabel></app-organisation-tabel>
             </div>
         </div>
