--- a/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-tabel.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-tabel.component.html
@@ -1,61 +1,65 @@
 <app-loading-spinner *ngIf="isLoadingResults; else showTable">
 </app-loading-spinner>
-<ng-template class="mat-elevation-z8" #showTable>
-    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
+<ng-template #showTable>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc"
+            matSortDisableClear>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'ORGANISATION.NAME' | translate }}
-            </th>
-            <td mat-cell *matCellDef="let element">
-                <a [routerLink]="[element.id]" routerLinkActive="active" class="organisation-link">
-                    {{element.name}}</a>
-            </td>
-        </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    {{ 'ORGANISATION.NAME' | translate }}
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    <a [routerLink]="[element.id]" routerLinkActive="active" class="organisation-link">
+                        {{element.name}}</a>
+                </td>
+            </ng-container>
 
-        <!-- Id Column -->
-        <ng-container matColumnDef="applications">
-            <th mat-header-cell *matHeaderCellDef>
-                {{ 'ORGANISATION.APPLICATION-COUNT' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                <div *ngIf="element.applications; else noApplications">
-                    {{element.applications.length}}
-                </div>
-                <ng-template #noApplications>
-                    <div>Ingen applikationer er tilknyttet endnu</div>
-                </ng-template>
-            </td>
-        </ng-container>
+            <!-- Id Column -->
+            <ng-container matColumnDef="applications">
+                <th mat-header-cell *matHeaderCellDef>
+                    {{ 'ORGANISATION.APPLICATION-COUNT' | translate }}</th>
+                <td mat-cell *matCellDef="let element">
+                    <div *ngIf="element.applications; else noApplications">
+                        {{element.applications.length}}
+                    </div>
+                    <ng-template #noApplications>
+                        <div>Ingen applikationer er tilknyttet endnu</div>
+                    </ng-template>
+                </td>
+            </ng-container>
 
-        <!-- Menu Column -->
-        <ng-container matColumnDef="menu">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-                <div class="dropdown ">
-                    <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
-                        class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
-                        [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-                    <ul class="dropdown-menu dropdown-menu--table"
-                        attr.aria-labelledby="tableRowDropdown-{{element.id}}">
-                        <li class="dropdown-item">
-                            <a [routerLink]="[element.id, 'edit-organisation']"
-                                routerLinkActive="active">{{ 'ORGANISATION-TABLE-ROW.EDIT' | translate }}
-                            </a>
-                        </li>
-                        <li class="dropdown-item">
-                            <a (click)="clickDelete(element)"
-                                [routerLink]="">{{ 'ORGANISATION-TABLE-ROW.DELETE' | translate }}
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </td>
-        </ng-container>
+            <!-- Menu Column -->
+            <ng-container matColumnDef="menu">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                    <div class="dropdown ">
+                        <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
+                            class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+                            [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+                        <ul class="dropdown-menu dropdown-menu--table"
+                            attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+                            <li class="dropdown-item">
+                                <a [routerLink]="[element.id, 'edit-organisation']"
+                                    routerLinkActive="active">{{ 'ORGANISATION-TABLE-ROW.EDIT' | translate }}
+                                </a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a (click)="clickDelete(element)"
+                                    [routerLink]="">{{ 'ORGANISATION-TABLE-ROW.DELETE' | translate }}
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
-    </mat-paginator>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength"
+            showFirstLastButtons>
+        </mat-paginator>
+    </div>
 </ng-template>
