--- a/src/app/admin/permission/permission-list/permission-list.component.html
+++ b/src/app/admin/permission/permission-list/permission-list.component.html
@@ -3,7 +3,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <div class="page">
+            <div class="jumbotron--table">
                 <app-permission-tabel [permissions]="permissions" (deletePermission)="deletePermission($event)"
                     [isLoadingResults]="isLoadingResults">
                 </app-permission-tabel>
