--- a/src/app/admin/users/user-list/user-list.component.html
+++ b/src/app/admin/users/user-list/user-list.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <div class="page">
+            <div class="jumbotron--table">
                 <app-user-table [users]="users" [isLoadingResults]="isLoadingResults"></app-user-table>
             </div>
         </div>
