--- a/src/app/applications/applications-list/applications-list.component.html
+++ b/src/app/applications/applications-list/applications-list.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
-      <div class="page">
+      <div class="jumbotron--table">
         <app-applications-table [applications]="applications" (deleteApplication)="deleteApplication($event)"
           [isLoadingResults]="isLoadingResults">
         </app-applications-table>
