--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -1,68 +1,72 @@
 <app-loading-spinner *ngIf="isLoadingResults; else showTable">
 </app-loading-spinner>
-<ng-template class="mat-elevation-z8" #showTable>
-    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
+<ng-template #showTable>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc"
+            matSortDisableClear>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'APPLICATION-TABLE.NAME' | translate }}
-            </th>
-            <td mat-cell *matCellDef="let element">
-                <a [routerLink]="['/applications', element.id]" routerLinkActive="active"
-                    class="application-link">{{element.name}}</a>
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    {{ 'APPLICATION-TABLE.NAME' | translate }}
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    <a [routerLink]="['/applications', element.id]" routerLinkActive="active"
+                        class="application-link">{{element.name}}</a>
+                </td>
+            </ng-container>
+
+            <!-- Devices Column -->
+            <ng-container matColumnDef="devices">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-1">
+                    {{ 'APPLICATION-TABLE.IOT-DEVICES' | translate }}</th>
+                <td mat-cell *matCellDef="let element">
+                    <ng-container *ngIf="element.iotDevices; else iotZero">
+                <td>{{element.iotDevices.length}}</td>
+            </ng-container>
+            <ng-template #iotZero>
+                <td>0</td>
+            </ng-template>
             </td>
-        </ng-container>
+            </ng-container>
 
-        <!-- Devices Column -->
-        <ng-container matColumnDef="devices">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-1">
-                {{ 'APPLICATION-TABLE.IOT-DEVICES' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                <ng-container *ngIf="element.iotDevices; else iotZero">
-            <td>{{element.iotDevices.length}}</td>
-        </ng-container>
-        <ng-template #iotZero>
-            <td>0</td>
-        </ng-template>
-        </td>
-        </ng-container>
+            <!-- Latest Update Column -->
+            <ng-container matColumnDef="latest-update" class="col-1">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    {{ 'APPLICATION-TABLE.UPDATED' | translate }}</th>
+                <td mat-cell *matCellDef="let element">
+                    {{element.updatedAt | date:'dd/MM yyyy'}}
+                </td>
+            </ng-container>
 
-        <!-- Latest Update Column -->
-        <ng-container matColumnDef="latest-update" class="col-1">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'APPLICATION-TABLE.UPDATED' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                {{element.updatedAt | date:'dd/MM yyyy'}}
-            </td>
-        </ng-container>
+            <!-- Menu Column -->
+            <ng-container matColumnDef="menu">
+                <th mat-header-cell *matHeaderCellDef class="col-1"></th>
+                <td mat-cell *matCellDef="let element">
+                    <div class="dropdown">
+                        <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
+                            class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+                            [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+                        <ul class="dropdown-menu dropdown-menu--table"
+                            attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+                            <li class="dropdown-item">
+                                <a [routerLink]="['edit-application', element.id ]"
+                                    routerLinkActive="active">{{ 'APPLICATION-TABLE-ROW.EDIT' | translate }}</a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a (click)="clickDelete(element)"
+                                    [routerLink]="">{{ 'APPLICATION-TABLE-ROW.DELETE' | translate }}</a>
+                            </li>
+                        </ul>
+                    </div>
+                </td>
+            </ng-container>
 
-        <!-- Menu Column -->
-        <ng-container matColumnDef="menu">
-            <th mat-header-cell *matHeaderCellDef class="col-1"></th>
-            <td mat-cell *matCellDef="let element">
-                <div class="dropdown">
-                    <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
-                        class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
-                        [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-                    <ul class="dropdown-menu dropdown-menu--table"
-                        attr.aria-labelledby="tableRowDropdown-{{element.id}}">
-                        <li class="dropdown-item">
-                            <a [routerLink]="['edit-application', element.id ]"
-                                routerLinkActive="active">{{ 'APPLICATION-TABLE-ROW.EDIT' | translate }}</a>
-                        </li>
-                        <li class="dropdown-item">
-                            <a (click)="clickDelete(element)"
-                                [routerLink]="">{{ 'APPLICATION-TABLE-ROW.DELETE' | translate }}</a>
-                        </li>
-                    </ul>
-                </div>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
-    </mat-paginator>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength"
+            showFirstLastButtons>
+        </mat-paginator>
+    </div>
 </ng-template>
