--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -1,4 +1,5 @@
-<app-top-bar [backButtonTitle]="'NAV.APPLICATION' | translate" [title]="'APPLICATION.BULK.TITLE' | translate"></app-top-bar>
+<app-top-bar [backButtonTitle]="'NAV.APPLICATION' | translate" [title]="'APPLICATION.BULK.TITLE' | translate">
+</app-top-bar>
 <div class="row">
     <div class="col-12">
         <mat-progress-bar *ngIf="download$ | async as download"
@@ -52,39 +53,40 @@
     <div class="col-md-6 mb-5">
         <app-loading-spinner *ngIf="isLoading"></app-loading-spinner>
     </div>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="bulkImportResult" class="mat-elevation-z8">
 
-    <table mat-table [dataSource]="bulkImportResult" class="mat-elevation-z8">
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.NAME' | translate }} </th>
+                <td mat-cell *matCellDef="let element"> {{element.device?.name}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.NAME' | translate }} </th>
-            <td mat-cell *matCellDef="let element"> {{element.device?.name}} </td>
-        </ng-container>
+            <ng-container matColumnDef="type">
+                <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.TYPE' | translate }} </th>
+                <td mat-cell *matCellDef="let element"> {{"IOT-DEVICE-TYPES." + element.device?.type | translate}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="type">
-            <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.TYPE' | translate }} </th>
-            <td mat-cell *matCellDef="let element"> {{"IOT-DEVICE-TYPES." + element.device?.type | translate}} </td>
-        </ng-container>
+            <ng-container matColumnDef="importStatus">
+                <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.IMPORTSTATUS' | translate }} </th>
+                <td mat-cell *matCellDef="let element"> {{element.importStatus}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="importStatus">
-            <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.IMPORTSTATUS' | translate }} </th>
-            <td mat-cell *matCellDef="let element"> {{element.importStatus}} </td>
-        </ng-container>
+            <ng-container matColumnDef="errorMessages">
+                <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.ERROR' | translate }} </th>
+                <td mat-cell *matCellDef="let element">
+                    <ul class="mb-0">
+                        <li *ngFor="let error of element.errorMessages">
+                            {{error}}
+                        </li>
+                    </ul>
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="errorMessages">
-            <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.ERROR' | translate }} </th>
-            <td mat-cell *matCellDef="let element">
-                <ul class="mb-0">
-                    <li *ngFor="let error of element.errorMessages">
-                        {{error}}
-                    </li>
-                </ul>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
 </div>
-<!-- <div *ngIf="iotDevice.length === 0" class="col-md-6 offset-md-3 mb-5">
+<!-- <div class="col-md-6 offset-md-3 mb-5">
     <p>{{ 'APPLICATION.BULK.EMPTY' | translate }}</p>
 </div> -->
