--- a/src/app/device-model/device-model-list/device-model-list.component.html
+++ b/src/app/device-model/device-model-list/device-model-list.component.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
-      <div class="page">
+      <div class="jumbotron--table">
         <app-device-model-table></app-device-model-table>
       </div>
     </div>
