--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -1,95 +1,100 @@
 <app-loading-spinner *ngIf="isLoadingResults; else showTable">
 </app-loading-spinner>
-<ng-template class="mat-elevation-z8" #showTable>
-    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
+<ng-template #showTable>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc"
+            matSortDisableClear>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'LORA-GATEWAY-TABLE.NAME' | translate }}
-            </th>
-            <td mat-cell *matCellDef="let element">
-                <a [routerLink]="['gateway-detail', element.id]" routerLinkActive="active" class="application-link">
-                    {{ element.name }}
-                </a>
-            </td>
-        </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    {{ 'LORA-GATEWAY-TABLE.NAME' | translate }}
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    <a [routerLink]="['gateway-detail', element.id]" routerLinkActive="active" class="application-link">
+                        {{ element.name }}
+                    </a>
+                </td>
+            </ng-container>
 
-        <!-- Id Column -->
-        <ng-container matColumnDef="gateway-id">
-            <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.GATEWAYID' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.id }}
-            </td>
-        </ng-container>
+            <!-- Id Column -->
+            <ng-container matColumnDef="gateway-id">
+                <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.GATEWAYID' | translate }}</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.id }}
+                </td>
+            </ng-container>
 
-        <!-- Location Column -->
-        <ng-container matColumnDef="internalOrganizationName">
-            <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.ORGANIZATION' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.internalOrganizationName }}
-            </td>
-        </ng-container>
+            <!-- Location Column -->
+            <ng-container matColumnDef="internalOrganizationName">
+                <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.ORGANIZATION' | translate }}</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.internalOrganizationName }}
+                </td>
+            </ng-container>
 
-        <!-- Location Column -->
-        <ng-container matColumnDef="location">
-            <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.location.longitude  | number:'2.1-6' }}, {{ element.location.latitude  | number:'2.1-6' }}
-            </td>
-        </ng-container>
+            <!-- Location Column -->
+            <ng-container matColumnDef="location">
+                <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.location.longitude  | number:'2.1-6' }},
+                    {{ element.location.latitude  | number:'2.1-6' }}
+                </td>
+            </ng-container>
 
-        <!-- Last seen Column -->
-        <ng-container matColumnDef="last-seen">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'LORA-GATEWAY-TABLE.LAST-SEEN-AT' | translate }}
-            </th>
-            <td mat-cell *matCellDef="let element">
-                {{lastActive(element)}}
-            </td>
-        </ng-container>
+            <!-- Last seen Column -->
+            <ng-container matColumnDef="last-seen">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    {{ 'LORA-GATEWAY-TABLE.LAST-SEEN-AT' | translate }}
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    {{lastActive(element)}}
+                </td>
+            </ng-container>
 
-        <!-- Status Column -->
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header="gateway-status">
-                {{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}
-            </th>
-            <td mat-cell *matCellDef="let element">
-                <ng-container *ngIf="gatewayStatus(element); then statusOk else statusError"></ng-container>
-                <ng-template #statusOk>
-                    <fa-icon [icon]="faCheckCircle" class="fa-ok"></fa-icon>
-                </ng-template>
-                <ng-template #statusError>
-                    <fa-icon [icon]="faExclamationTriangle" class="fa-error"></fa-icon>
-                </ng-template>
-            </td>
-        </ng-container>
+            <!-- Status Column -->
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header="gateway-status">
+                    {{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}
+                </th>
+                <td mat-cell *matCellDef="let element">
+                    <ng-container *ngIf="gatewayStatus(element); then statusOk else statusError"></ng-container>
+                    <ng-template #statusOk>
+                        <fa-icon [icon]="faCheckCircle" class="fa-ok"></fa-icon>
+                    </ng-template>
+                    <ng-template #statusError>
+                        <fa-icon [icon]="faExclamationTriangle" class="fa-error"></fa-icon>
+                    </ng-template>
+                </td>
+            </ng-container>
 
-        <!-- Menu Column -->
-        <ng-container matColumnDef="menu">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-                <div class="dropdown" *ngIf="element.canEdit">
-                    <a href="#" role="button" id="tableRowDropdown-{{ element.id }}"
-                        class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
-                        [attr.aria-label]="'LORA-GATEWAY-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-                    <ul class="dropdown-menu dropdown-menu--table"
-                        attr.aria-labelledby="tableRowDropdown-{{ element.id }}">
-                        <li class="dropdown-item">
-                            <a [routerLink]="['gateway-edit', element.id]"
-                                routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
-                        </li>
-                        <li class="dropdown-item">
-                            <a (click)="clickDelete(element)" [routerLink]="">{{ 'GEN.DELETE' | translate }}</a>
-                        </li>
-                    </ul>
-                </div>
-            </td>
-        </ng-container>
+            <!-- Menu Column -->
+            <ng-container matColumnDef="menu">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                    <div class="dropdown" *ngIf="element.canEdit">
+                        <a href="#" role="button" id="tableRowDropdown-{{ element.id }}"
+                            class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+                            [attr.aria-label]="'LORA-GATEWAY-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+                        <ul class="dropdown-menu dropdown-menu--table"
+                            attr.aria-labelledby="tableRowDropdown-{{ element.id }}">
+                            <li class="dropdown-item">
+                                <a [routerLink]="['gateway-edit', element.id]"
+                                    routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
+                            </li>
+                            <li class="dropdown-item">
+                                <a (click)="clickDelete(element)" [routerLink]="">{{ 'GEN.DELETE' | translate }}</a>
+                            </li>
+                        </ul>
+                    </div>
+                </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
-    </mat-paginator>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength"
+            showFirstLastButtons>
+        </mat-paginator>
+    </div>
 </ng-template>
