--- a/src/app/sigfox/sigfox-groups-detail/sigfox-device-type-table/sigfox-device-type-table.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-device-type-table/sigfox-device-type-table.component.html
@@ -1,23 +1,26 @@
 <app-loading-spinner *ngIf="isLoadingResults; else showTable">
 </app-loading-spinner>
-<ng-template class="mat-elevation-z8 row table" #showTable>
-    <table mat-table [dataSource]="dataSource">
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef>{{ 'SIGFOX-GROUP.PROFILES.DEVICE-TYPE-NAME' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                <a [routerLink]="[element.id, 'edit-device-type']" routerLinkActive="active" class="device-link">
-                    {{element.name}}
-                </a>
-            </td>
-        </ng-container>
+<ng-template #showTable>
+    <div class="mat-elevation-z8 row table">
+        <table mat-table [dataSource]="dataSource">
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>{{ 'SIGFOX-GROUP.PROFILES.DEVICE-TYPE-NAME' | translate }}</th>
+                <td mat-cell *matCellDef="let element">
+                    <a [routerLink]="[element.id, 'edit-device-type']" routerLinkActive="active" class="device-link">
+                        {{element.name}}
+                    </a>
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="alertEmail">
-            <th mat-header-cell *matHeaderCellDef>{{ 'SIGFOX-GROUP.PROFILES.DEVICE-TYPE-ALERT-EMAIL' | translate }}</th>
-            <td mat-cell *matCellDef="let element">{{element.alertEmail}}</td>
-        </ng-container>
+            <ng-container matColumnDef="alertEmail">
+                <th mat-header-cell *matHeaderCellDef>{{ 'SIGFOX-GROUP.PROFILES.DEVICE-TYPE-ALERT-EMAIL' | translate }}
+                </th>
+                <td mat-cell *matCellDef="let element">{{element.alertEmail}}</td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="editDeviceType(row)"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" showFirstLastButtons></mat-paginator>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="editDeviceType(row)"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" showFirstLastButtons></mat-paginator>
+    </div>
 </ng-template>
