--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -46,7 +46,7 @@
               [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
             <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
               <li class="dropdown-item">
-                <a [routerLink]="[element.id, 'edit-application']"
+                <a (click)="navigateToEditPage(element.id)"
                   routerLinkActive="active">{{ 'APPLICATION-TABLE-ROW.EDIT' | translate }}</a>
               </li>
               <li class="dropdown-item">
