--- a/src/app/profiles/service-profiles/service-profiles-list/service-profile-item/service-profile-item.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-list/service-profile-item/service-profile-item.component.html
@@ -5,7 +5,7 @@
         {{ serviceProfile.name }}
       </a>
     </div>
-    <div class="col-3 pull-right d-flex align-items-center justify-content-end">
+    <div class="col-3 pull-right d-flex align-items-center justify-content-end" *ngIf="serviceProfile.canEdit">
       <a (click)="onDeleteServiceProfile()">
         <div class="icon-list-wrapper text-center">
           <fa-icon [icon]="faTimesCircle" class="icon--primary"></fa-icon>
