--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -24,7 +24,7 @@
 
           <!-- action buttons -->
           <div class="action-group">
-            <button *ngIf="ctaRouterLink" [routerLink]="ctaRouterLink" routerLinkActive="active"
+            <button *ngIf="ctaRouterLink && ctaRouterLink != ''" [routerLink]="ctaRouterLink" routerLinkActive="active"
               class="btn btn-primary mr-1" type="button" [attr.aria-label]="ctaLabel">{{ctaLabel}}</button>
             <div class="btn-group float-md-right dropdown" *ngIf="dropDownButton && addDetailDowndown === true">
               <button type="button" id="dropdown-{{ data.name }}" class="btn btn-primary dropdown-toggle"
