--- a/src/app/admin/permission/permission-list/permission-list.component.html
+++ b/src/app/admin/permission/permission-list/permission-list.component.html
@@ -4,8 +4,7 @@
     <div class="row">
         <div class="col-12">
             <div class="jumbotron--table">
-                <app-permission-tabel [permissions]="permissions" (deletePermission)="deletePermission($event)"
-                    [isLoadingResults]="isLoadingResults">
+                <app-permission-tabel>
                 </app-permission-tabel>
             </div>
         </div>
