--- a/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
+++ b/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
@@ -1,84 +1,77 @@
-<app-loading-spinner *ngIf="isLoadingResults; else showTable">
-</app-loading-spinner>
-<ng-template #showTable>
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="data" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc"
-            matSortDisableClear>
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                {{ 'PERMISSION.NAME' | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element">
+                <a (click)="routeToPermissions(element)" routerLinkActive="active" class="permission-link">
+                    {{element.name}}</a>
+            </td>
+        </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    {{ 'PERMISSION.NAME' | translate }}
-                </th>
-                <td mat-cell *matCellDef="let element">
-                    <a (click)="routeToPermissions(element)" routerLinkActive="active" class="permission-link">
-                        {{element.name}}</a>
-                </td>
-            </ng-container>
+        <!-- Organisations Column -->
+        <ng-container matColumnDef="organisations">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                {{ 'PERMISSION.ORGANISATION' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+                {{element?.organization?.name ? element.organization.name : ("PERMISSION.NO_ORGANISATION" | translate)}}
 
-            <!-- Organisations Column -->
-            <ng-container matColumnDef="organisations">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    {{ 'PERMISSION.ORGANISATION' | translate }}</th>
-                <td mat-cell *matCellDef="let element">
-                    {{element?.organization?.name ? element.organization.name : ("PERMISSION.NO_ORGANISATION" | translate)}}
+            </td>
+        </ng-container>
 
-                </td>
-            </ng-container>
+        <!-- Number of members Column -->
+        <ng-container matColumnDef="members">
+            <th mat-header-cell *matHeaderCellDef>
+                {{ 'PERMISSION.NUMBER_OF_MEMBERS' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+                <div *ngIf="element.users; else noUsers">
+                    {{element.users.length}}
 
-            <!-- Number of members Column -->
-            <ng-container matColumnDef="members">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    {{ 'PERMISSION.NUMBER_OF_MEMBERS' | translate }}</th>
-                <td mat-cell *matCellDef="let element">
-                    <div *ngIf="element.users; else noUsers">
-                        {{element.users.length}}
+                </div>
+                <ng-template #noUsers>Ingen brugere er tilføjet</ng-template>
+            </td>
+        </ng-container>
 
-                    </div>
-                    <ng-template #noUsers>Ingen brugere er tilføjet</ng-template>
-                </td>
-            </ng-container>
+        <!-- Type Column -->
+        <ng-container matColumnDef="type">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                {{ 'PERMISSION.TYPE' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+                {{ 'PERMISSION-TYPE.' + element.type | translate }}
+            </td>
+        </ng-container>
 
-            <!-- Type Column -->
-            <ng-container matColumnDef="type">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    {{ 'PERMISSION.TYPE' | translate }}</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ 'PERMISSION-TYPE.' + element.type | translate }}
-                </td>
-            </ng-container>
+        <!-- Menu Column -->
+        <ng-container matColumnDef="menu">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <div class="dropdown ">
+                    <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
+                        class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+                        [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+                    <ul class="dropdown-menu dropdown-menu--table"
+                        attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+                        <li class="dropdown-item">
+                            <a [routerLink]="['/admin/permissions', element.id, 'edit-permission']"
+                                routerLinkActive="active">{{ 'USERS.TABLE-ROW.EDIT' | translate }}
+                            </a>
+                        </li>
+                        <li class="dropdown-item">
+                            <a (click)="deletePermission(element.id)"
+                                [routerLink]="">{{ 'PERMISSION.TABLE-ROW.DELETE' | translate }}
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </td>
+        </ng-container>
 
-            <!-- Menu Column -->
-            <ng-container matColumnDef="menu">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element">
-                    <div class="dropdown ">
-                        <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
-                            class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
-                            [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-                        <ul class="dropdown-menu dropdown-menu--table"
-                            attr.aria-labelledby="tableRowDropdown-{{element.id}}">
-                            <li class="dropdown-item">
-                                <a [routerLink]="['/admin/permissions', element.id, 'edit-permission']"
-                                    routerLinkActive="active">{{ 'USERS.TABLE-ROW.EDIT' | translate }}
-                                </a>
-                            </li>
-                            <li class="dropdown-item">
-                                <a (click)="clickDelete(element)"
-                                    [routerLink]="">{{ 'PERMISSION.TABLE-ROW.DELETE' | translate }}
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength"
-            showFirstLastButtons>
-        </mat-paginator>
-    </div>
-</ng-template>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
+    </mat-paginator>
+</div>
